--- a/Views/Pages/Shared/_Layout.cshtml
+++ b/Views/Pages/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                 {
                     <div class="h-100">
                         <a href="/Profile" class="d-block h-100" role="button">
-                            <img src="@user.Avatar" class="d-block h-100" />
+                            <img src="@user.Avatar" class="d-block h-100 rounded-circle" style="width: 4.9rem"/>
                         </a>
                         
                     </div>
