--- a/Views/Pages/Profile/ChangePassword.cshtml
+++ b/Views/Pages/Profile/ChangePassword.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Profile";
     Layout = "_Layout";
+    var photoPath = Model.Profile.Avatar ?? "/images/static/user-avatar.png";
 }
 <div class="container-xl" style="min-height: calc(100vh - 70px - 244px); height:calc(100vh - 70px - 244px)">
     <div class="row w-100 h-100 justify-content-between">
         <div class="col-3 border-end border-dark-subtle">
             <div class="w-100">
-                <img class="d-block w-100 object-fit-cover" src="@Model.Profile.Avatar"/>
+                <img class="d-block w-100 object-fit-cover rounded-circle" style="height: 30.65rem" src="@Model.Profile.Avatar"/>
             </div>
         </div>
         <div class="col-9">
