--- a/Views/Pages/Shared/_Manager.cshtml
+++ b/Views/Pages/Shared/_Manager.cshtml
@@ -52,7 +52,7 @@
                         }
                         @if (ViewData["Title"].Equals("Tickets Manager"))
                         {
-                            <a class="d-block w-100 btn btn-dark text-decoration-none rounded-pill p-3 mb-3" role="button">
+                            <a class="d-block w-100 btn btn-dark text-decoration-none rounded-pill p-3 mb-3 disabled" role="button" href="/Manager/Tickets">
                                 <div class="row m-0 justify-content-center align-items-center">
                                     <div class="col-2">
                                         <div class="w-100">
@@ -70,7 +70,7 @@
                         }
                         else
                         {
-                            <a class="d-block w-100 btn btn-outline-dark text-decoration-none rounded-pill p-3 mb-3" role="button">
+                            <a class="d-block w-100 btn btn-outline-dark text-decoration-none rounded-pill p-3 mb-3" role="button" href="/Manager/Tickets">
                                 <div class="row m-0 justify-content-center align-items-center">
                                     <div class="col-2">
                                         <div class="w-100">
