fix(ticket): fix Create Ticket

--- a/Views/Pages/Tickets/EditTicketPage.cshtml
+++ b/Views/Pages/Tickets/EditTicketPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/Tickets/{id}/Edit"
-@model Views.Pages.EditTicketPageModel
+@model Views.Pages.Tickets.EditTicketPageModel
 @{
     ViewData["Title"] = "EditTicketPage";
     Layout = "_Layout";
