--- a/Views/Pages/Tickets/CreateTicketPage.cshtml
+++ b/Views/Pages/Tickets/CreateTicketPage.cshtml
@@ -1,9 +1,9 @@
 ﻿@page "/Tickets/Create"
-@model Views.Pages.CreateTicketPageModel
+@model Views.Pages.Tickets.CreateTicketPageModel
 
 @{
     ViewData["Title"] = "CreateTicketPage";
-    Layout = "~/Pages/Shared/_Layout.cshtml";
+    Layout = "_Layout";
 }
 
 <div class="container-fluid w-80 mx-auto" style="height: 100%">
@@ -11,11 +11,11 @@
 
     <div class="card shadow-lg border-0 mx-auto" style="max-width: 600px; border-radius: 15px;">
         <div class="card-body p-5">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger mb-4"></div>
 
                 <div class="form-group">
-                    <img id="previewImage" src="@Url.Content(Model.Ticket.Image ?? "/images/default.jpg")"
+                    <img id="previewImage" src="/images/default.jpg"
                          class="card-img-top mb-2" style="height: 25rem; object-fit: cover;" />
                 </div>
 
@@ -137,16 +137,5 @@
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
-
-        <script>
-        function previewImage(event) {
-            var reader = new FileReader();
-            reader.onload = function() {
-                var output = document.getElementById('previewImage');
-                output.src = reader.result;
-            }
-            reader.readAsDataURL(event.target.files[0]);
-        }
-        </script>
     }
 }
