add create, cancel order button in chat, edit getAsync in chatBox Dao

--- a/Views/Pages/Chats/Chatroom.cshtml
+++ b/Views/Pages/Chats/Chatroom.cshtml
@@ -9,7 +9,16 @@
 }
 <div class="container-xl row">
     <div class="col-3 p-3">
-        <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Chat room</h1>
+        <div style="flex:auto">
+            <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Chat room</h1>
+            <form method="post" class="row justify-content-center px-3">
+                <button type="submit" class="btn btn-dark col-2 rounded-end-pill" style="font-size: 1.6rem;" name="btnOrderTicket" value="Order" />
+                <button type="submit" class="btn btn-dark col-2 rounded-end-pill" style="font-size: 1.6rem;" name="btnCancelTicket" value="Cancel" />
+            </form>
+            <div class="col-3 p-3" style="padding-right: 40px">
+                
+            </div>
+        </div>
 
         @foreach (var item in Model.Chatboxes)
         {
