fix: edit passs

--- a/Views/Pages/Profile/ChangePassword.cshtml
+++ b/Views/Pages/Profile/ChangePassword.cshtml
@@ -31,9 +31,9 @@
             <div class="w-100 d-flex justify-content-center ">
                  <div class="w-50">
                     <form method="post">
-                        <input asp-for="OldPassword" placeholder="Old password" class="form-control mb-3 fs-3" />
-                        <input asp-for="NewPassword" placeholder="New password" class="form-control mb-3 fs-3" />
-                        <input asp-for="ConfirmPassword" placeholder="Confirm password" class="form-control mb-3 fs-3" />
+                        <input asp-for="OldPassword" placeholder="Old password" class="form-control mb-3 fs-3" type="password"/>
+                        <input asp-for="NewPassword" placeholder="New password" class="form-control mb-3 fs-3" type="password"/>
+                        <input asp-for="ConfirmPassword" placeholder="Confirm password" class="form-control mb-3 fs-3" type="password"/>
                         <div class="row">
                             <div class="col-6">
                                 <button type="submit" class="btn btn-outline-dark fs-3 w-100">Save change</button>
