--- a/Views/Pages/Tickets/CreateTicketPage.cshtml
+++ b/Views/Pages/Tickets/CreateTicketPage.cshtml
@@ -23,7 +23,7 @@
                     <label asp-for="Image" class="col-sm-2 col-form-label control-label text-dark font-weight-bold">Image<span class="text-danger">*</span></label>
                     <div class="col-sm-10">
                         <div class="custom-file">
-                            <input asp-for="Image" class="custom-file-input form-control" onchange="previewImage(event)" />
+                            <input asp-for="Image" class="custom-file-input form-control"/>
                         </div>
                     </div>
                     <span asp-validation-for="Ticket.Image" class="text-danger"></span>
