--- a/Views/Pages/Tickets/EditTicketPage.cshtml
+++ b/Views/Pages/Tickets/EditTicketPage.cshtml
@@ -7,18 +7,24 @@
 <div class="container-fluid w-80 mx-auto" style="height: 100%">
     <div class="card shadow-lg border-0 mx-auto" style="max-width: 600px; border-radius: 15px;">
         <div class="card-body p-5">
-            <form method="post" style="font-size: 1.6rem;">
-                <div asp-validation-summary="ModelOnly" class="text-danger mb-4"></div>
+            <form method="post" style="font-size: 1.6rem;" enctype="multipart/form-data">
                 <input type="hidden" asp-for="Ticket.Id" />
-                <input type="hidden" asp-for="Ticket.Image" />
+
                 <div class="form-group">
-                    <label asp-for="Ticket.Image" class="control-label text-dark font-weight-bold"
-                        style="margin-top: 10px">Upload Image<span class="text-danger">*</span></label>
                     <img id="previewImage"
-                         src="~/images/@Model.Ticket.Image" asp-append-version="true"
-                        alt="Uploaded Image" class="card-img-top mb-2" style="height: 25rem; object-fit: cover;" />
-                    <input type="file" class="form-control-file shadow-sm border-0" style="font-size: 1.6rem;" />
+                         src="~/images/@Model.Ticket.Image" 
+                         alt="Uploaded Image" class="card-img-top mb-2" style="height: 25rem; object-fit: cover;" />
                 </div>
+
+                <div class="form-group">
+                    <label asp-for="Image" class="col-sm-2 col-form-label control-label text-dark font-weight-bold">Image</label>
+                    <div class="col-sm-10">
+                        <div class="custom-file">
+                            <input asp-for="Image" class="custom-file-input form-control" type="file" required="false"/>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <label asp-for="Ticket.Title" class="control-label text-dark font-weight-bold"
                         style="margin-top: 10px">Title<span class="text-danger">*</span></label>
