--- a/Views/Pages/MyTicketsPage.cshtml
+++ b/Views/Pages/MyTicketsPage.cshtml
@@ -44,12 +44,8 @@
                                            style="font-size: 1.6rem; transition: 0.3s;">View details</a>
                                 </div>
                                 <div class="col-12 mt-2">
-                                    <form method="post" asp-page-handler="Delete" asp-route-id="@item.Id" style="display:inline;"
-                                          onsubmit="return confirm('Are you sure you want to delete this ticket?');">
-                                        <button type="submit" class="btn btn-danger w-100 text-white" style="font-size: 1.6rem; transition: 0.3s;">
-                                            Delete
-                                        </button>
-                                    </form>
+                                    <a href="/Tickets/@item.Id/Delete" type="button" class="btn btn-danger w-100 text-white"
+                                       style="font-size: 1.6rem; transition: 0.3s;">Delete</a>
                                 </div>
                             </div>
                         </div>
