--- a/Views/Pages/Chats/Chatroom.cshtml
+++ b/Views/Pages/Chats/Chatroom.cshtml
@@ -14,58 +14,69 @@
         <div style="flex:auto">
             <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Chat room</h1>
             <form method="post" class="row justify-content-center px-3">
-                <button type="submit" class="btn btn-dark col-2 rounded-end-pill" style="font-size: 1.6rem;" name="btnOrderTicket" value="Order" />
-                <button type="submit" class="btn btn-dark col-2 rounded-end-pill" style="font-size: 1.6rem;" name="btnCancelTicket" value="Cancel" />
+                <input type="submit" name="btnOrderTicket" value="Order" />
+                <input type="submit" name="btnCancelTicket" value="Cancel" />
             </form>
             <div class="col-3 p-3" style="padding-right: 40px">
                 
             </div>
         </div>
-
-        @foreach (var item in Model.Chatboxes)
+        @if (Model.Chatboxes != null)
         {
-            <div class="w-100 overflow-y-auto overfow-x-hidden p-2 d-flex flex-column align-items-center"></div>
-            <div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
-                <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png" />
+            foreach (var item in Model.Chatboxes)
+            {
+                <div class="w-100 overflow-y-auto overfow-x-hidden p-2 d-flex flex-column align-items-center"></div>
+                <div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
+                    <div class="col-3">
+                        <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png" />
+                    </div>
+                    <div class="col-9 fs-5">
+                        <p class="mb-0 py-1 fs-4 fw-bold">@item.Ticket.Title</p>
+                        <p class="mb-0 py-1">@DateTime.UtcNow</p>
+                    </div>
                 </div>
-                <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">@item.Ticket.Title</p>
-                    <p class="mb-0 py-1">@DateTime.UtcNow</p>
-                </div>
-            </div>
+            }
         }
+        
     </div>
 </div>
 <div class="col-9 border-start p-3">
     <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Messages</h1>
     <div class="w-100 overflow-y-scroll p-3" style="min-height: calc(100vh - 355px);">
-        @foreach(var chat in Model.Chatbox.ChatMessages)
+        @if (Model.Messages != null)
         {
-            if (chat.SenderId != user.Id)
+            foreach (var chat in Model.Chatbox.ChatMessages)
             {
-                <div class="d-flex justify-content-end mb-3">
-                    <div class="d-flex flex-column align-items-end">
-                        <span class="fs-4 text-dark fw-bold">@Model.Chatbox.Buyer.Username</span>
-                        <span class="fs-5 text-secondary">@chat.Message</span>
+                if (chat.SenderId != user.Id)
+                {
+                    <div class="d-flex justify-content-end mb-3">
+                        <div class="d-flex flex-column align-items-end">
+                            <span class="fs-4 text-dark fw-bold">@Model.Chatbox.Buyer.Username</span>
+                            <span class="fs-5 text-secondary">@chat.Message</span>
+                        </div>
                     </div>
-                </div>
-            }
-            else
-            {
-                <div class="d-flex justify-content-start mb-3">
-                    <div class="d-flex flex-column">
-                        <span class="fs-4 text-dark fw-bold">@Model.Chatbox.Seller.Username</span>
-                        <span class="fs-5 text-secondary">@chat.Message</span>
+                }
+                else
+                {
+                    <div class="d-flex justify-content-start mb-3">
+                        <div class="d-flex flex-column">
+                            <span class="fs-4 text-dark fw-bold">@Model.Chatbox.Seller.Username</span>
+                            <span class="fs-5 text-secondary">@chat.Message</span>
+                        </div>
                     </div>
-                </div>
+                }
             }
         }
+        
+        <div class="d-flex justify-content-start mb-3">
+            <div class="d-flex flex-column">
+                <span class="fs-5 text-secondary" id="messageList"></span>
+            </div>
+        </div>
 
         <div class="d-flex justify-content-start mb-3">
             <div class="d-flex flex-column">
-                <span class="fs-4 text-dark fw-bold">@Model.Chatbox.Seller.Username</span>
-                <span class="fs-5 text-secondary" id="messageList"></span>
+                <span class="fs-5 text-secondary" id="messagesSendedList"></span>
             </div>
         </div>
         
