--- a/Views/Pages/Tickets/DeleteTicketPage.cshtml
+++ b/Views/Pages/Tickets/DeleteTicketPage.cshtml
@@ -1,9 +1,19 @@
 ﻿@page "/Tickets/{id}/Delete"
 @model Views.Pages.Tickets.DeleteTicketPageModel
-
+@using Business
+@using Utils
 @{
     ViewData["Title"] = "DeleteTicketPage";
     Layout = "_Layout";
+
+    string? logedInUser = HttpContext.Session.GetString("LogedInUser");
+    User? user = logedInUser != null ? JsonUtil.ReadJsonItem<User>(logedInUser) : null;
+    int roleId = user.RoleId;
+    int userId = user.Id;
+    if ((roleId != 3) || (userId != Model.Ticket.Owner.Id)) 
+    {
+        Response.Redirect("../NoPermission");
+    }
 }
 
 <h1>DeleteTicketPage</h1>
@@ -65,7 +75,7 @@
             @Html.DisplayNameFor(model => model.Ticket.Owner)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Ticket.Owner.Email)
+            @Html.DisplayFor(model => model.Ticket.Owner.Username)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Ticket.Status)
